fix(#108): ensure void elements have CSS and script attributes pre-processed

--- a/generator/test-css-usage/expected.html
+++ b/generator/test-css-usage/expected.html
@@ -1,1 +1,10 @@
-<style type="text/css">.className_f179{background-color:#ffffff;color:#ff0000;}</style><button class="className_f179 --templ-css-class-safe-name safe safe2" type="button">A</button><button class="className_f179 --templ-css-class-safe-name safe safe2" type="button">B</button><style type="text/css">.green_58d2{color:#00ff00;}</style><button class="green_58d2" type="button">Green</button><div class="a c"></div><div class="a"></div>
+<style type="text/css">
+.className_f179{background-color:#ffffff;color:#ff0000;}
+</style>
+<button class="className_f179 --templ-css-class-safe-name safe safe2" type="button">A</button>
+<button class="className_f179 --templ-css-class-safe-name safe safe2" type="button">B</button>
+<style type="text/css">.green_58d2{color:#00ff00;}</style>
+<button class="green_58d2" type="button">Green</button>
+<div class="a c"></div>
+<div class="a"></div>
+<input type="email" id="email" name="email" class="a b" placeholder="your@email.com" autocomplete="off"/>
