fix: replace new lines in constant attributes with escaped new lines (#124)

--- a/generator/test-element-attributes/expected.html
+++ b/generator/test-element-attributes/expected.html
@@ -13,4 +13,8 @@
 <div style="width: 100;" class="unimportant_900a">
   Else
  </div>
+<div data-script="on click
+                do something
+             end">
+</div>
 
