fix: add missing support for templ.SafeCSS in optional CSS class expressions, fixes #162

--- a/generator/test-css-usage/expected.html
+++ b/generator/test-css-usage/expected.html
@@ -8,3 +8,5 @@
 <div class="a c"></div>
 <div class="a"></div>
 <input type="email" id="email" name="email" class="a b" placeholder="your@email.com" autocomplete="off"/>
+<button class="bg-violet-500 hover:bg-violet-600">Save changes</button>
+
